--- a/resources/index.html
+++ b/resources/index.html
@@ -6,6 +6,8 @@
 <p>hi</p>
 
 <script src="/js/ServerConnection.js"></script>
+<script src="/js/Game.js">
+<script src="/js/GameInit.js">
 
 </body>
 </html>
