Game manager and communication interface improvements

--- a/resources/index.html
+++ b/resources/index.html
@@ -5,9 +5,11 @@
 <body>
 <p>hi</p>
 
+<script src="/js/jquery.js"></script>
 <script src="/js/ServerConnection.js"></script>
-<script src="/js/Game.js">
-<script src="/js/GameInit.js">
+<script src="/js/Game.js"></script>
+<script src="/js/GameInit.js"></script>
+<script src="/js/AjaxCalls.js"></script>
 
 </body>
 </html>
