improve loading screen

--- a/src-frontend/index.html
+++ b/src-frontend/index.html
@@ -11,6 +11,22 @@
 
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+
+    <style>
+      .loading-screen {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+        font-weight: 300;
+        text-transform: uppercase;
+      }
+    </style>
+    <div class="loading-screen">
+      Loading...
+    </div>
+  </app-root>
 </body>
 </html>
